kustomize/overlays/prod/server/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-server
  labels:
    app: image-server
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: image-server
