kustomize/overlays/prod/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-server-ingress-internal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: internal
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/upload
            pathType: Exact
            backend:
              service:
                name: image-server-service
                port:
                  number: 5000
          - path: /api/sources
            pathType: Exact
            backend:
              service:
                name: image-server-service
                port:
                  number: 5000
          - path: /api/update
            pathType: Exact
            backend:
              service:
                name: image-server-service
                port:
                  number: 5000
          - path: /api/delete
            pathType: Exact
            backend:
              service:
                name: image-server-service
                port:
                  number: 5000
